# donatello

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: release-drafter.yml
.github/workflows/: deploy.yml
exercises/: quiz1.rs  quiz3.rs  quiz4.rs
exercises/clippy/: clippy1.rs  clippy2.rs
exercises/collections/: hashmap1.rs  hashmap2.rs  vec2.rs
exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
exercises/enums/: enums2.rs  enums3.rs
exercises/error_handling/: errors1.rs  result1.rs
exercises/functions/: README.md  functions1.rs  functions5.rs
exercises/generics/: generics3.rs
exercises/if/: if1.rs
exercises/macros/: macros2.rs  macros4.rs
exercises/move_semantics/: move_semantics4.rs
exercises/option/: option1.rs  option2.rs
exercises/standard_library_types/: arc1.rs  iterators2.rs  iterators3.rs  iterators4.rs
exercises/strings/: strings2.rs
exercises/structs/: structs1.rs  structs2.rs  structs3.rs
exercises/tests/: tests1.rs  tests3.rs
exercises/threads/: threads1.rs
exercises/traits/: traits1.rs  traits2.rs
exercises/variables/: README.md  variables2.rs
migrations/2020-09-27-145434_create_users/: up.sql
migrations/2020-10-19-223232_tambah_unique_email/: down.sql  up.sql
migrations/2020-11-07-234354_set_id_not_null/: down.sql  up.sql
src/: main.rs  models.rs  routers.rs  schema.rs  state.rs
src/user/: dto.rs  handlers.rs  interface.rs  mod.rs  model.rs  routers.rs
templates/: base.html
