[package]
name = "donatello"
version = "0.20.0"
authors = ["Arizal Akbar Zikri <akbarpn136@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.8.2"
chrono = "0.4.19"
serde = "1.0.114"
dotenv = "0.15.0"
actix-web = "3.0.2"
env_logger = "0.7.1"
serde_json = "1.0.56"
jsonwebtoken = "7.2.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
rusqlite = { version ="0.23.0", features = ["bundled"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
